--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
         setTyping(true);
 
         try {
-            const res = await fetch("http://localhost:3000/chat", {
+            const res = await fetch("/api/chat", {
                 method: "POST",
                 headers: { "Content-Type": "application/json" },
                 body: JSON.stringify({ message, conversationId })
