--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
         <div class="welcome-card">
             <div class="cross-icon">✝️</div>
             <p><strong>Bem-vindo à Zion Lisboa</strong><br>
-                Estou aqui para te ajudar com informações sobre a nossa igreja, cultos, eventos e muito mais. Como posso servir-te hoje? </p>
+                Eu sou Assistente Virtual da Zion Lisboa, e estou aqui para te ajudar com informações sobre a nossa igreja, cultos, eventos e muito mais. Como posso servir-te hoje? </p>
         </div>
     </div>
 
