--- a/index.html
+++ b/index.html
@@ -870,7 +870,7 @@
 
                          Abre o teu chat original -->
 
-            <a href="chat-zion.html" class="btn-icon btn-icon--wide">
+            <a href="chat.html" class="btn-icon btn-icon--wide">
                 <div class="icon-wrap ic-gold"></div>
                 <span class="label">Chat<br>Assistente Virtual Zion Lisboa</span>
             </a>
