--- a/salas.html
+++ b/salas.html
@@ -131,6 +131,7 @@ body::before{content:'';position:fixed;inset:0;background:radial-gradient(ellips
 @keyframes slideUp{from{transform:translateY(100%)}to{transform:translateY(0)}}
 @keyframes spin{to{transform:rotate(360deg)}}
 </style>
+  <script src="config.js"></script>
 </head>
 <body>
 <div class="page-wrapper">
