--- a/login.html
+++ b/login.html
@@ -68,6 +68,7 @@
 
         @keyframes fadeUp{from{opacity:0;transform:translateY(10px)}to{opacity:1;transform:translateY(0)}}
     </style>
+    <script src="config.js"></script>
 </head>
 <body>
 <div class="page-wrapper">
