--- a/visitantes.html
+++ b/visitantes.html
@@ -49,7 +49,9 @@
     .footer-bottom{display:flex;flex-direction:column;align-items:center;gap:2px}
     .footer-copy{color:var(--text-muted);font-size:10px;letter-spacing:1px;text-transform:uppercase;font-family:'Cinzel',serif;text-align:center}
     .footer-address{color:var(--text-faint);font-size:10px;text-align:center}
-    @keyframes fadeUp{from{opacity:0;transform:translateY(12px)}to{opacity:1;transform:translateY(0)}}</style>
+    @keyframes fadeUp{from{opacity:0;transform:translateY(12px)}to{opacity:1;transform:translateY(0)}}
+</style>
+  <script src="config.js"></script>
 </head>
 <body>
 <div class="page-wrapper">
