--- a/salas.html
+++ b/salas.html
@@ -82,9 +82,9 @@ body::before{content:'';position:fixed;inset:0;background:radial-gradient(ellips
 .agenda-hoje-btn{padding:5px 12px;border-radius:14px;border:1px solid var(--border);background:var(--bg-card);font-family:'Cinzel',serif;font-size:9px;letter-spacing:1px;color:var(--gold-dark);cursor:pointer;transition:all 0.2s}
 .agenda-hoje-btn:hover{border-color:var(--gold-light)}
 /* Dias da semana */
-.week-days{display:flex;gap:6px;padding:0 16px 10px;overflow-x:auto}
-.week-days::-webkit-scrollbar{height:0}
-.day-pill{flex-shrink:0;display:flex;flex-direction:column;align-items:center;gap:2px;padding:7px 10px;border-radius:10px;border:1px solid var(--border);background:var(--bg-card);cursor:pointer;transition:all 0.2s;min-width:44px}
+.week-days{display:grid;grid-template-columns:repeat(7,1fr);gap:6px;padding:0 16px 10px}
+
+.day-pill{display:flex;flex-direction:column;align-items:center;gap:2px;padding:7px 4px;border-radius:10px;border:1px solid var(--border);background:var(--bg-card);cursor:pointer;transition:all 0.2s;}
 .day-pill:hover{border-color:var(--gold-light)}
 .day-pill.active{background:linear-gradient(135deg,var(--gold-dark),var(--gold-light));border-color:transparent}
 .day-pill.hoje{border-color:var(--gold-light)}
