--- a/index.html
+++ b/index.html
@@ -166,11 +166,12 @@
             <a href="localizacao.html" class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon">📍</div>Localização</a>
             <a href="keola.html"       class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon">☕</div>Keola</a>
             <a href="zao.html"         class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon">✝️</div>ZAO</a>
+            <a href="chat.html"        class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon">💬</div>Chat Assistente</a>
             <a href="membros.html"     class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon">👤</div>Membros</a>
             <a href="visitantes.html"  class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon">🤝</div>Visitantes</a>
             <a href="dizimos.html"     class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon">💛</div>Dízimos</a>
             <a href="salas.html"       class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon">🏛️</div>Salas</a>
-            <a href="chat.html"        class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon">💬</div>Chat Assistente</a>
+            <a href="aprovacoes.html"  class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon">🤔</div>Aprovação</a>
         </nav>
         <div class="drawer-footer">
             <div class="drawer-footer-links">
