--- a/aprovacoes.html
+++ b/aprovacoes.html
@@ -233,7 +233,7 @@
 
     // ── INIT ───────────────────────────────────────────────────
     async function init() {
-        renderUserBar();
+        //renderUserBar();
 
         // Verifica se tem acesso — busca o membro correspondente
         const membros = await sb(`membros?select=e_admin,e_presbitero&email=eq.${encodeURIComponent(currentUser.email)}&ativo=eq.true`);
