--- a/salas.html
+++ b/salas.html
@@ -107,6 +107,8 @@ body::before{content:'';position:fixed;inset:0;background:radial-gradient(ellips
 .a-hora{font-size:12px;color:var(--gold);margin:2px 0}
 .a-quem{font-size:11px;color:var(--text-muted)}
 .a-titulo{font-size:11px;color:var(--text-faint);font-style:italic}
+.a-motivo{font-size:11px;color:var(--red);margin-top:3px;padding:4px 8px;background:var(--red-bg);border-radius:6px;border-left:2px solid var(--red)}
+.a-aprovado{font-size:10px;color:var(--green);margin-top:2px}
 .a-badge{font-family:'Cinzel',serif;font-size:8px;letter-spacing:1px;text-transform:uppercase;padding:2px 8px;border-radius:10px;flex-shrink:0}
 .a-badge.aprovado{background:var(--green-bg);color:var(--green);border:1px solid var(--green-border)}
 .a-badge.pendente{background:var(--orange-bg);color:var(--orange);border:1px solid var(--orange-border)}
@@ -514,13 +516,19 @@ function renderAgendaDia(ds) {
       const fim = new Date(a.data_fim);
       const hi  = ini.toLocaleTimeString('pt-PT',{hour:'2-digit',minute:'2-digit'});
       const hf  = fim.toLocaleTimeString('pt-PT',{hour:'2-digit',minute:'2-digit'});
+      const motivoHtml = a.status === 'recusado' && a.motivo_recusa
+        ? `<div class="a-motivo">❌ ${a.motivo_recusa}</div>` : '';
+      const aprovadoHtml = a.status === 'aprovado' && a.aprovado_em
+        ? `<div class="a-aprovado">✅ Aprovado em ${new Date(a.aprovado_em).toLocaleDateString('pt-PT')}</div>` : '';
       html += `<div class="agenda-item" style="animation-delay:${i*0.04}s">
         <div class="a-dot ${a.status}"></div>
         <div class="a-info">
           <div class="a-sala">${a.sala?.nome||'Sala'}</div>
           <div class="a-hora">🕐 ${hi} → ${hf}</div>
           <div class="a-quem">👤 ${a.solicitante_nome||'—'}</div>
-          <div class="a-titulo">${a.titulo||''}</div>
+          ${a.titulo ? `<div class="a-titulo">${a.titulo}</div>` : ''}
+          ${motivoHtml}
+          ${aprovadoHtml}
         </div>
         <span class="a-badge ${a.status}">${a.status}</span>
       </div>`;
