--- a/index.html
+++ b/index.html
@@ -160,18 +160,19 @@
         <div class="drawer-auth" id="drawer-auth"></div>
 
         <nav class="drawer-nav">
-            <a href="zion.html"        class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon">⛪</div>Zion Lisboa</a>
-            <a href="ministerios.html" class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon">🙌</div>Ministérios</a>
-            <a href="links.html"       class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon">🔗</div>Links</a>
-            <a href="localizacao.html" class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon">📍</div>Localização</a>
-            <a href="keola.html"       class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon">☕</div>Keola</a>
-            <a href="zao.html"         class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon">✝️</div>ZAO</a>
-            <a href="chat.html"        class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon">💬</div>Chat Assistente</a>
-            <a href="membros.html"     class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon">👤</div>Membros</a>
-            <a href="visitantes.html"  class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon">🤝</div>Visitantes</a>
-            <a href="dizimos.html"     class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon">💛</div>Dízimos</a>
-            <a href="salas.html"       class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon">🏛️</div>Salas</a>
-            <a href="aprovacoes.html"  class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon">🤔</div>Aprovação</a>
+            <a href="zion.html"        class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon"></div>Zion Lisboa</a>
+            <a href="ministerios.html" class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon"></div>Ministérios</a>
+            <a href="links.html"       class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon"></div>Links</a>
+            <a href="localizacao.html" class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon"></div>Localização</a>
+            <a href="keola.html"       class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon"></div>Keola</a>
+            <a href="zao.html"         class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon">️</div>ZAO</a>
+            <a href="chat.html"        class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon"></div>Chat Assistente</a>
+            <a href="membros.html"     class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon"></div>Membros</a>
+            <a href="visitantes.html"  class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon"></div>Visitantes</a>
+            <a href="dizimos.html"     class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon"></div>Dízimos</a>
+            <a href="salas.html"       class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon">️</div>Salas</a>
+            <a href="aprovacoes.html"  class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon"></div>Aprovação</a>
+            <a href="admin.html"       class="drawer-item" onclick="closeDrawer()"><div class="drawer-icon"></div>Cadastros</a>
         </nav>
         <div class="drawer-footer">
             <div class="drawer-footer-links">
@@ -201,15 +202,15 @@
                 <span class="label">Zion</span>
             </a>
             <a href="links.html" class="btn-icon">
-                <div class="icon-wrap ic-blue">🔗</div>
+                <div class="icon-wrap ic-blue"></div>
                 <span class="label">Links</span>
             </a>
             <a href="localizacao.html" class="btn-icon">
-                <div class="icon-wrap ic-red">📍</div>
+                <div class="icon-wrap ic-red"></div>
                 <span class="label">Localização</span>
             </a>
             <a href="https://www.bibliaonline.com.br" target="_blank" class="btn-icon">
-                <div class="icon-wrap ic-red">📖</div>
+                <div class="icon-wrap ic-red"></div>
                 <span class="label">Bíblia</span>
             </a>
 
@@ -251,9 +252,9 @@
             </a>
 
              Abre o teu chat original -->
-            
+
             <a href="chat.html" class="btn-icon btn-icon--wide">
-                <div class="icon-wrap ic-gold">💬</div>
+                <div class="icon-wrap ic-gold"></div>
                 <span class="label">Chat<br>Assistente Virtual Zion Lisboa</span>
             </a>
         </div>
