--- a/admin.html
+++ b/admin.html
@@ -24,20 +24,29 @@
         .page-wrapper{position:relative;z-index:1;display:flex;flex-direction:column;width:640px;max-width:96vw;height:96vh;max-height:900px;background:var(--bg-card);border-radius:16px;box-shadow:var(--shadow),0 0 0 1px var(--border);overflow:hidden}
 
         /* Top bar */
-        .top-bar{display:flex;align-items:center;gap:10px;padding:12px 16px;background:linear-gradient(135deg,#0d0d0d,#1c1408);border-bottom:1px solid rgba(184,146,42,0.3);flex-shrink:0}
-        .top-bar-logo{font-family:'Cinzel',serif;font-size:16px;font-weight:700;color:#C9A84C;letter-spacing:4px;flex:1}
-        .top-bar-badge{font-family:'Cinzel',serif;font-size:8px;letter-spacing:2px;text-transform:uppercase;color:rgba(201,168,76,0.6);background:rgba(201,168,76,0.1);border:1px solid rgba(201,168,76,0.2);padding:2px 8px;border-radius:10px}
-        .top-bar-user{font-size:11px;color:rgba(255,255,255,0.5);font-family:'Cinzel',serif}
-        .top-bar-logout{padding:5px 10px;border-radius:8px;border:1px solid rgba(220,80,60,0.3);background:rgba(220,80,60,0.08);color:#e74c3c;font-family:'Cinzel',serif;font-size:9px;letter-spacing:1px;cursor:pointer;flex-shrink:0;transition:all 0.2s}
-        .top-bar-back{display:flex;align-items:center;gap:4px;color:rgba(201,168,76,0.6);text-decoration:none;font-family:'Cinzel',serif;font-size:9px;letter-spacing:1px;transition:color 0.2s;flex-shrink:0}
-        .top-bar-back:hover{color:#C9A84C}
+        .banner{width:100%;position:relative;background:#111;flex-shrink:0}
+        .banner img{width:100%;height:110px;object-fit:cover;display:block}
+        .banner-fallback{display:none;width:100%;height:110px;background:linear-gradient(135deg,#0d0d0d 0%,#1c1408 50%,#0d0d0d 100%);align-items:center;justify-content:center;flex-direction:column;gap:8px}
+        .banner-fallback.show{display:flex}
+        .banner-title{font-family:'Cinzel',serif;color:#C9A84C;font-size:26px;font-weight:700;letter-spacing:10px}
+        .banner-sub{color:rgba(201,168,76,0.6);font-size:10px;letter-spacing:4px;text-transform:uppercase}
+        .banner-overlay{position:absolute;bottom:0;left:0;right:0;height:55px;background:linear-gradient(to top,rgba(255,255,255,0.97),transparent)}
+        .banner-nav{position:absolute;bottom:10px;left:0;right:0;display:flex;align-items:center;justify-content:space-between;padding:0 16px}
+        .back-btn{display:flex;align-items:center;gap:6px;background:rgba(255,255,255,0.92);border:1px solid var(--border);border-radius:20px;padding:5px 14px;font-family:'Cinzel',serif;font-size:10px;letter-spacing:1.5px;color:var(--gold-dark);text-decoration:none;backdrop-filter:blur(8px)}
+        .page-badge{font-family:'Cinzel',serif;font-size:10px;letter-spacing:2px;color:var(--gold);text-transform:uppercase;background:rgba(255,255,255,0.92);border:1px solid var(--border);border-radius:20px;padding:5px 14px;backdrop-filter:blur(8px)}
+        .gold-line{height:2px;background:linear-gradient(90deg,transparent,var(--gold-light),transparent);flex-shrink:0;opacity:0.5}
+        .user-bar{display:flex;align-items:center;gap:10px;padding:10px 16px;background:linear-gradient(135deg,rgba(201,168,76,0.08),rgba(201,168,76,0.02));border-bottom:1px solid var(--border);flex-shrink:0}
+        .user-bar-info{flex:1}
+        .user-bar-nome{font-family:'Cinzel',serif;font-size:12px;color:var(--gold-dark)}
+        .user-bar-tipo{font-size:10px;color:var(--text-faint)}
+        .logout-btn{display:flex;align-items:center;gap:5px;padding:5px 10px;border-radius:8px;border:1px solid rgba(220,80,60,0.3);background:rgba(220,80,60,0.06);color:#c0392b;font-family:'Cinzel',serif;font-size:9px;letter-spacing:1px;cursor:pointer;flex-shrink:0;transition:all 0.2s}
 
         /* Nav sections */
-        .nav-bar{display:flex;overflow-x:auto;background:#1a1208;border-bottom:1px solid rgba(184,146,42,0.2);flex-shrink:0}
+        .nav-bar{display:flex;overflow-x:auto;background:var(--bg-input);border-bottom:1px solid var(--border);flex-shrink:0}
         .nav-bar::-webkit-scrollbar{height:0}
-        .nav-item{flex-shrink:0;padding:9px 14px;font-family:'Cinzel',serif;font-size:9px;letter-spacing:1.5px;text-transform:uppercase;color:rgba(201,168,76,0.45);cursor:pointer;border-bottom:2px solid transparent;transition:all 0.2s;white-space:nowrap}
-        .nav-item:hover{color:rgba(201,168,76,0.8)}
-        .nav-item.active{color:#C9A84C;border-bottom-color:#C9A84C}
+        .nav-item{flex-shrink:0;padding:9px 14px;font-family:'Cinzel',serif;font-size:9px;letter-spacing:1.5px;text-transform:uppercase;color:var(--text-faint);cursor:pointer;border-bottom:2px solid transparent;transition:all 0.2s;white-space:nowrap}
+        .nav-item:hover{color:var(--gold)}
+        .nav-item.active{color:var(--gold);border-bottom-color:var(--gold)}
 
         /* Content */
         .content{flex:1;overflow-y:auto;background:var(--bg-input)}
@@ -154,13 +163,22 @@
 </head>
 <body>
 <div class="page-wrapper">
-    <!-- Top bar -->
-    <div class="top-bar">
-        <div class="top-bar-logo">ZION</div>
-        <span class="top-bar-badge">Admin</span>
-        <a href="index.html" class="top-bar-back">Inicio</a>
-        <span class="top-bar-user" id="top-user"></span>
-        <button class="top-bar-logout" onclick="ZionAuth.logout()">Sair</button>
+    <div class="banner">
+        <img src="banner zion.jpg" alt="Zion Lisboa" onerror="this.style.display='none';document.querySelector('.banner-fallback').classList.add('show');">
+        <div class="banner-fallback"><div class="banner-title">ZION</div><div class="banner-sub">Lisboa · Portugal</div></div>
+        <div class="banner-overlay"></div>
+        <div class="banner-nav">
+            <a href="index.html" class="back-btn">← Inicio</a>
+            <span class="page-badge">Admin</span>
+        </div>
+    </div>
+    <div class="gold-line"></div>
+    <div class="user-bar">
+        <div class="user-bar-info">
+            <div class="user-bar-nome" id="top-user"></div>
+            <div class="user-bar-tipo">Administrador</div>
+        </div>
+        <button class="logout-btn" onclick="ZionAuth.logout()">Sair</button>
     </div>
 
     <!-- Nav -->
@@ -602,8 +620,7 @@
     function camposLinks() { return [
         {key:'nome',          label:'Nome',           ph:'Ex: LINK Montijo',       full:true},
         {key:'tipo',          label:'Tipo',           type:'select', options:[
-                {v:'Familias',l:'Familias'},{v:'Jovens',l:'Jovens'},{v:'Mulheres',l:'Mulheres'},
-                {v:'Homens',l:'Homens'},{v:'Casais',l:'Casais'},{v:'Criancas',l:'Criancas'},{v:'Online',l:'Online'}
+                {v:'Familias',l:'Familias'},{v:'FLOW',l:'FLOW'},{v:'VOX',l:'VOX'},{v:'Diamantes',l:'Diamantes'},{v:'EKLECTOS',l:'EKLECTOS'}
             ]},
         {key:'faixa_etaria',  label:'Faixa Etaria',   ph:'Ex: 18-35 anos'},
         {key:'responsavel',   label:'Responsavel',    ph:'Nome do lider',          full:true},
