--- a/admin.html
+++ b/admin.html
@@ -173,13 +173,14 @@
         </div>
     </div>
     <div class="gold-line"></div>
+    <!-- 
     <div class="user-bar">
         <div class="user-bar-info">
             <div class="user-bar-nome" id="top-user"></div>
             <div class="user-bar-tipo">Administrador</div>
         </div>
         <button class="logout-btn" onclick="ZionAuth.logout()">Sair</button>
-    </div>
+    </div> -->
 
     <!-- Nav -->
     <div class="nav-bar" id="nav-bar">
